added devise with login and add additional column to user model

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
 <h3>STOCK TRADING PAGE</h3>
-<p>Symbol: <%=  @symbol %></p>
-<br>
-<p>Stock Price: <%=  @stock_price %></p>
+<% if @symbol %>
+  <p>Symbol: <%=  @symbol %></p>
+  <br>
+  <p>Stock Price: <%=  @stock_price %></p>
+<% end %>
