--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -25,3 +25,11 @@
     </div>
   </li>
 </ul>
+
+
+
+<br><br>
+
+<%= link_to "Sign Out", destroy_user_session_path, 
+data: {turbo_method: :delete, turbo_confirm: "Sure ka ba?"},
+class: "btn btn-danger" %> 
