--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -3,6 +3,12 @@
 <h1>Quantity: <%= @stock.quantity %></h1>
 <h1>Price: <%= @price %></h1>
 <div>
-  <button>Buy</button>
-  <button>Sell</button>
+  <%= form_with url: buy_stock_path(@stock) do |f| %>
+    <%= number_field_tag :quantity, nil, placeholder: "Quantity" %>
+    <%= f.submit "Buy" %>
+  <% end %>
+  <%= form_with url: sell_stock_path(@stock) do |f| %>
+    <%= number_field_tag :quantity, nil, placeholder: "Quantity" %>
+    <%= f.submit "Sell" %>
+  <% end %>
 </div>
