added link to view user transactions

--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -20,6 +20,10 @@
     </li>
   <% end %>
 </ul>
+
+<%= link_to "View Your Transactions", transactions_path  %>
+
+<ul>
   <li>
     <div>MSFT</div>
     <div>Quantity: 1</div>
