--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,34 +1,89 @@
 <h1>Admin#index</h1>
 <p>Find me in app/views/admin/index.html.erb</p>
 
+
+
+<button id="toggleButton">Show Trader User</button> <br>
+
+<div id="userTable">
+
 <table class="table table-bordered border-primary">
   <thead>
     <tr>
       <th scope="col">USER ID</th>
       <th scope="col">EMAIL</th>
-      <th scope="col">ROLE</th>
-      <th scope="col">BALANCE</th>
-      <th scope="col">STATUS</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Is Admin</th>
+      <th scope="col">Is Approve</th>
       <th scope="col">KUNG ANO PA MAN?</th>
-      
+      <th scope="col">EDIT?</th>   
     </tr>
   </thead>
+
+      <% @user.each_with_index do |user, index| %>
+
+  
     </tr>
     <tr>
-      <th scope="row">USER ID</th>
-      <td>John</td>
-      <td>Doe</td>
-      <td>John</td>
-      <td>Doe</td>
-  
+      <th scope="row"> <%= user.id %> </th>
+      <td><%= user.email %></td>
+      <td><%= user.first_name %></td>
+      <td><%= user.last_name %></td>
+      <td><%= user.isAdmin ? "True" : "False" %></td>
+      <td><%= user.isApproved ? "True" : "False" %></td>
       <td class="table-active">@social</td>
+      <td> <%= link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-primary' %></td>
     </tr>
   </tbody>
+      <% end %>
 </table>
 
+</div>
 
+<div id="traderTable">
+
+<table class="table table-bordered border-primary">
+  <thead>
+    <tr>
+      <th scope="col">USER ID</th>
+      <th scope="col">EMAIL</th>
+      <th scope="col">First Name</th>
+      <th scope="col">Last Name</th>
+      <th scope="col">Is Admin</th>
+      <th scope="col">Is Approve?</th>
+      <th scope="col">KUNG ANO PA MAN?</th>
+      <th scope="col">EDIT?</th>   
+    </tr>
+  </thead>
+
+  <% @trader.each_with_index do |user, index| %>
+      
+  
+    </tr>
+    <tr>
+      <th scope="row"> <%= user.id %> </th>
+      <td><%= user.email %></td>
+      <td><%= user.first_name %></td>
+      <td><%= user.last_name %></td>
+      <td><%= user.isAdmin %></td>
+      <td><%= user.isApproved %></td>
+      <td class="table-active"> </td>
+      <td><%= link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-primary' %></td>
+    </tr>
+  </tbody>
+      <% end %>
+</table>
+
+</div>
 
 
 <%= link_to "Home Page", root_path %> <br> <br>
 
-<%= link_to "Create Account", new_admin_path %>
+<%= link_to "Create Account", new_admin_user_path %> <br> <br>
+
+<%= link_to "View All Transaction", admin_show_path %>
+
+
+
+
