--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -23,7 +23,7 @@
     <tr>
       <th scope="row">><%= transaction.user_id %></td>
       <th> <%= transaction.id %> </th>
-      <td><%= transaction.type %></td>
+      <td><%= transaction.transaction_type %></td>
       <td><%= transaction.code %></td>
       <td><%= transaction.quantity %></td>
       <td><%= transaction.current_price %></td>
