Can now send and receive email after registration. Can now also receive an email if the admin creates an account and if the user is approve, via edit. Disbaled buy and sell button for the user is not yet approved

--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -28,7 +28,7 @@
       <td><%= transaction.quantity %></td>
       <td><%= transaction.current_price %></td>
       <td><%= transaction.total %></td>
-      <td class="table-active"><%= link_to "View", admin_users_show_path(@user) %></td>
+      <td class="table-active"><%= link_to "View", transactions_path  %></td>
     </tr>
   </tbody>
       <% end %>
