--- a/app/views/stocks/search.html.erb
+++ b/app/views/stocks/search.html.erb
@@ -12,8 +12,11 @@
           <%= hidden_field_tag :code, res[:symbol]  %>
         </div>
         <div>
+          <% if current_user.isApproved?%>
           <%= number_field_tag :quantity, nil , placeholder: "Quantity" %>
           <%= f.submit "Buy" %>
+          <%end%>
+
         </div>
       <% end %>
     </li>
