--- a/app/views/stocks/search.html.erb
+++ b/app/views/stocks/search.html.erb
@@ -12,7 +12,8 @@
           <%= hidden_field_tag :code, res[:symbol]  %>
         </div>
         <div>
-          <% if current_user.isApproved?%>
+          <% if current_user.isApproved? || current_user.isAdmin %>
+          
           <%= number_field_tag :quantity, nil , placeholder: "Quantity" %>
           <%= f.submit "Buy" %>
           <%end%>
