--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Transactions</h1>
+<%= render partial: 'admin/users/transaction_history', locals: { trader: @user } %>
 
+<%= link_to "Home Page", root_path %> <br> <br>
