--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -15,7 +15,7 @@
       <div><%= stock.code %></div>
       <div><%= stock.quantity %></div>
       <div>
-        <%= link_to "Show", stock_path(stock) %>
+        <%= link_to "Trade", stock_path(stock) %>
       </div>
     </li>
   <% end %>
