Disabled sell button if 0 or negative stock. Code cleanup.

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: 'admin/users/transaction_history', locals: { trader: @user } %>
 
-<%= link_to "Home Page", root_path %> <br> <br>
+<%= link_to "Home Page", root_path %> <br>
+
+<%= link_to "Back to Admin Page", admin_index_path, style: "color: yellow;" %> <br>
