--- a/app/views/admin/users/_transaction_history.html.erb
+++ b/app/views/admin/users/_transaction_history.html.erb
@@ -1,21 +1,53 @@
-<h1> <%= @user.email %>'s PROFILE </h1>
+<p><strong><center> <%= @user.email %>'s PROFILE  </center></strong></p>
+  <br>
 
-<p><strong>ID:</strong> <%= @user.id %></p>
-<p><strong>First Name:</strong> <%= @user.first_name %> </p>
-<p><strong>Last Name:</strong> <%= @user.last_name %></p>
-<p><strong>IsAdmin?</strong> <%= @user.isAdmin %></p>
-<p><strong>IsApproved?</strong> <%= @user.isApproved %></p>
+<table class="table table-bordered border-primary">
+  <thead>
+  <tr>
+    <th scope="col">ID</th>
+    <th scope="col">First Name</th>
+    <th scope="col">Last Name</th>
+    <th scope="col">Is Admin</th>
+    <th scope="col">Is Approved</th>
+  </tr>
+  </thead>
+  <tr>
+      <th scope="row"> <%= @user.id %> </th>
+      <td><%= @user.first_name %></td>
+      <td><%= @user.last_name %></td>
+      <td><%= @user.isAdmin %></td>
+      <td><%= @user.isApproved %></td>
+      </ul>
+</table>
 
-<p><strong> TRANSACTION HISTORY </strong></p>
-<ul>
-  <% @user.transactions.each do |tx| %>
-    <li>
-      <div><%= tx.transaction_type %></div>
-      <div><%= tx.code %></div>
-      <div><%= tx.quantity %></div>
-      <div><%= tx.current_price %></div>
-      <div><%= tx.total %></div>
-      <div><%= tx.created_at %></div>
-    </li>
-  <% end %>
-</ul><br><br><br>
+  <br> <br>
+
+<p><strong><center> TRANSACTION HISTORY </center></strong></p> <br>
+
+<table class="table table-bordered border-primary">
+  <thead>
+  <tr>
+    <th scope="col">Transaction Type</th>
+    <th scope="col">Code</th>
+    <th scope="col">Quantity</th>
+    <th scope="col">Current Price</th>
+    <th scope="col">Total</th>
+    <th scope="col">Date</th>
+  </tr>
+  </thead>
+    <% @user.transactions.each do |tx| %>
+  <tr>
+      <th scope="row"> ><%= tx.transaction_type %> </th>
+      <td><%= tx.code %></td>
+      <td><%= tx.quantity %></td>
+      <td><%= tx.current_price %></td>
+      <td><%= tx.total %></td>
+      <td><%= tx.created_at %></td>
+      </ul>
+      <% end %>
+</table>
+
+
+
+<br><br><br>
+
