--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,13 +1,4 @@
-<h1>Your Transactions</h1>
-<ul>
-  <% @transactions.each do |tx| %>
-    <li>
-      <div><%= tx.transaction_type %></div>
-      <div><%= tx.code %></div>
-      <div><%= tx.quantity %></div>
-      <div><%= tx.current_price %></div>
-      <div><%= tx.total %></div>
-      <div><%= tx.created_at %></div>
-    </li>
-  <% end %>
-</ul>
+<h1><%= @current_user.email %> Transactions</h1>
+
+<%= render "transactions/user_transaction" %>
+
