--- a/app/views/admin/show.html.erb
+++ b/app/views/admin/show.html.erb
@@ -1,38 +1,4 @@
-<h1>Admin#show</h1>
-<p>Find me in app/views/admin/show.html.erb</p>
-
-
-<table class="table table-bordered border-primary">
-  <thead>
-    <tr>
-      <th scope="col">USER ID</th>
-      <th scope="col">Transaction ID</th>
-      <th scope="col">Type</th>
-      <th scope="col">Code</th>
-      <th scope="col">Quantity</th>
-      <th scope="col">Current Price</th>
-      <th scope="col">Total</th>
-     
-    </tr>
-  </thead>
-
-
-   <% @transaction.each do |transaction| %>
-
- </tr>
-    <tr>
-      <th scope="row">><%= transaction.user_id %></td>
-      <th> <%= transaction.id %> </th>
-      <td><%= transaction.transaction_type %></td>
-      <td><%= transaction.code %></td>
-      <td><%= transaction.quantity %></td>
-      <td><%= transaction.current_price %></td>
-      <td><%= transaction.total %></td>
-    
-    </tr>
-  </tbody>
-      <% end %>
-</table>
+<%= render "admin/all_transaction" %>
 
 <%= link_to "Home Page", root_path %> <br> <br>
 
