--- a/app/views/user_mailer/account_approve.html.erb
+++ b/app/views/user_mailer/account_approve.html.erb
@@ -1,3 +1,6 @@
 <p> SUCCESS! </p>
 
-<p> YOUR ACCOUNT IS NOW APPROVED. YOU CAN NOW START BUY AND SELL STOCKS </p>
+<p> YOUR ACCOUNT IS NOW APPROVED! </p> 
+
+<p>YOU MUST LOGIN FIRST BEFORE YOU CAN NOW START TRADING STOCKS!</p>
+
