--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,70 +1,4 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
-
-<button id="toggleButton">Show Trader User</button> <br>
-
-<div id="userTable">
-
-<table class="table table-bordered border-primary">
-  <thead>
-    <tr>
-      <th scope="col">USER ID</th>
-      <th scope="col">EMAIL</th>
-      <th scope="col">Is Admin?</th>
-      <th scope="col">Is Approved</th>
-      <th scope="col">EDIT?</th>
-      <th scope="col">VIEW PROFILE?</th>   
-    </tr>
-  </thead>
-
-    <% @user.each_with_index do |user, index| %>
-
-    </tr>
-    <tr>
-      <th scope="row"> <%= user.id %> </th>
-      <td><%= user.email %></td>
-      <td><%= user.isAdmin ? "True" : "False" %></td>
-      <td><%= user.isApproved ? "True" : "False" %></td>
-      <td> <%= link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-primary' %></td>
-      <td> <%= link_to 'Profile',  admin_user_path(user.id), class: 'btn btn-primary' %></td>
-    </tr>
-  </tbody>
-      <% end %>
-</table>
-
-</div>
-
-<div id="traderTable">
-
-<table class="table table-bordered border-primary">
-  <thead>
-    <tr>
-      <th scope="col">USER ID</th>
-      <th scope="col">EMAIL</th>
-      <th scope="col">Is Admin?</th>
-      <th scope="col">Is Approved?</th>
-      <th scope="col">EDIT?</th>
-      <th scope="col">VIEW?</th>   
-    </tr>
-  </thead>
-
-  <% @trader.each_with_index do |user, index| %>
-      
-    </tr>
-    <tr>
-      <th scope="row"> <%= user.id %> </th>
-      <td><%= user.email %></td>
-      <td><%= user.isAdmin %></td>
-      <td><%= user.isApproved %></td>
-      <td><%= link_to 'Edit', edit_admin_user_path(user), class: 'btn btn-primary' %></td>
-      <td> <%= link_to 'Profile',  admin_user_path(user.id), class: 'btn btn-primary' %></td>
-    </tr>
-  </tbody>
-      <% end %>
-</table>
-
-</div>
-
+<%= render "admin/trader" %>
 
 <%= link_to "Home Page", root_path %> <br> <br>
 
