--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,31 +1,11 @@
-<nav>
-    <li><strong>WELCOME <%= @current_user.email %> ! </strong></li>
-
-    <li>
-      <details class="dropdown">
-        <summary>
-          Account
-        </summary>
-        <ul dir="rtl">
-          <li><% if current_user.isAdmin?%>
-              <%= link_to "Admin Page", admin_index_path, style: "color: yellow;" %>
-              <% end %></li>
-          <li><%= link_to "Sign Out", destroy_user_session_path, 
-                  data: {turbo_method: :delete, turbo_confirm: "Sure ka ba?"},
-                  style: "color: red;" %></li>
-        </ul>
-      </details>
-    </li>
-</nav>
-
-
-</nav>
+<%= render "stocks/welcome" %>
 
 <div class="content">
 <% if @symbol %>
   <p>Symbol: <%=  @symbol %></p>
   <p>Stock Price: <%=  @stock_price %></p>
 <% end %>
+
 <%= form_with url: "/search", html: { role: "search" } , method: :get do |form| %>
   <%= form.search_field :query, aria: { label: "Seach" }, placeholder: "Search stock" %>
   <%= form.submit "Search" %>
