Last code cleanup

--- a/app/views/admin/_trader.html.erb
+++ b/app/views/admin/_trader.html.erb
@@ -1,4 +1,6 @@
-<h1><center>List of All Users</center></h1>
+<h1 id="allUser" style="text-align: center;">List of All Users</h1>
+<h1 id="allTrader" style="text-align: center;">List of All Traders</h1>
+
 
 <button id="toggleButton">Show Trader User</button> <br>
 
