--- a/app/views/admin/users/_transaction_history.html.erb
+++ b/app/views/admin/users/_transaction_history.html.erb
@@ -1,4 +1,4 @@
-<p><strong><center> <%= @user.email %>'s PROFILE  </center></strong></p>
+<p style="text-align: center;"><strong> <%= @user.email %>'s PROFILE</strong></p>
   <br>
 
 <table class="table table-bordered border-primary">
@@ -22,7 +22,7 @@
 
   <br> <br>
 
-<p><strong><center> TRANSACTION HISTORY </center></strong></p> <br>
+<p style="text-align: center;"><strong> TRANSACTION HISTORY </strong></p> <br>
 
 <table class="table table-bordered border-primary">
   <thead>
