--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create a New Trader Account</h1>
+<h1 style="text-align: center;">Create a New Trader Account</h1>
 
 <%= form_for @user, url: admin_users_path do |f| %>
   <% if @user.errors.any? %>
