--- a/app/views/admin/_all_transaction.html.erb
+++ b/app/views/admin/_all_transaction.html.erb
@@ -1,4 +1,4 @@
-<h1><center>All Transactions List</center></h1>
+<h1 style="text-align: center;">All Transactions List</h1>
 
 <table class="table table-bordered border-primary">
   <thead>
