--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit User Details</h1>
+<h1 style="text-align: center;">Edit User Details</h1>
 
 <%= form_for @user, url: admin_user_path(@user) do |f| %>
   <% if @user.errors.any? %>
